--- a/config.toml
+++ b/config.toml
@@ -1,16 +1,18 @@
-BaseURL = "http://suppatime.com"
-languageCode = "en-us"
-title = "Bashaw United Church"
+baseurl = "https://uparky.com"
 contact = "/:filename/"
+languagecode = "en-us"
+title = "Bashaw United Church"
 [[menu.main]]
-	name = "Sermons"
-	url = "/sermon"
-	weight = 1
+name = "Sermons"
+url = "/sermon"
+weight = 1
 [[menu.main]]
-	name = "Events"
-	url = "/event"
-	weight = 2
+name = "Events"
+url = "/event"
+weight = 2
 [[menu.main]]
-	name = "Blog"
-	url = "/blog"
-	weight = 2
+name = "Blog"
+url = "/blog"
+weight = 2
+[taxonomies]
+tag = "tags"
