--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://scottgallant.github.io/deploy-test"
+BaseURL = "http://scottgallant.github.io/deploy-test"
 contact = "/:filename/"
 languagecode = "en-us"
 pluralizelisttitles = false
